[gd_scene load_steps=6 format=3 uid="uid://dhrrkj5xdmdeb"]

[ext_resource type="Script" path="res://scripts/cat_display.gd" id="1_0xj6i"]
[ext_resource type="PackedScene" uid="uid://bebl7unp45048" path="res://scenes/cat_webcam.tscn" id="1_bc4rd"]
[ext_resource type="Texture2D" uid="uid://bj6o55ei14h8x" path="res://assets/textures/cat_display/hint.png" id="1_kwfk6"]
[ext_resource type="Texture2D" uid="uid://cb8ply4wtyueq" path="res://assets/textures/cat_display/border.png" id="4_3yo0l"]

[sub_resource type="ViewportTexture" id="ViewportTexture_hixn4"]
viewport_path = NodePath(".")

[node name="CatDisplay" type="Node2D"]
script = ExtResource("1_0xj6i")

[node name="SubViewport" parent="." instance=ExtResource("1_bc4rd")]

[node name="CatDisplaySprite" type="Sprite2D" parent="."]
texture = SubResource("ViewportTexture_hixn4")
centered = false

[node name="EarHint" type="TextureRect" parent="."]
offset_left = 259.0
offset_top = -53.0
offset_right = 2510.0
offset_bottom = 1213.0
scale = Vector2(0.600312, 0.600312)
texture = ExtResource("1_kwfk6")
metadata/_edit_group_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_3yo0l")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -19.0
offset_top = -13.0
offset_right = 1949.0
offset_bottom = 1102.0

[connection signal="button_down" from="Button" to="." method="_on_sprite_input"]
[connection signal="mouse_entered" from="Button" to="." method="mouse_enter"]
[connection signal="mouse_exited" from="Button" to="." method="mouse_exit"]
